# code-whisperers

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  __main__.py  copilot_proxy.py  docker-compose.yml  github_models_proxy.py  pyproject.toml  requirements.txt  self_review.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml
agents/: __init__.py  autofix_agent.py  aws_agent.py  base_agent.py  clean_code_agent.py  cost_agent.py  expert_agents.py  gitops_agent.py  jenkins_agent.py  python_agent.py  security_agent.py  terraform_agent.py
cli/: main.py
config/: __init__.py  agent_config.py  settings.py
docs/: INTEGRATION.md  example-report.md
docs/images/: README.md
examples/: __init__.py  custom_agents.py  model_config.py
git_integration/: __init__.py  git_utils.py
orchestration/: __init__.py  coordinator.py  pipeline.py
scripts/: github-action-example.yml  install.ps1  install.sh
scripts/git-hooks/: pre-push
testing/: __init__.py  test_runner.py  validators.py
tests/: __init__.py  test_agents.py  test_git_integration.py  test_integration.py  test_validators.py
vscode-extension/: .eslintrc.json  .gitignore  .vscodeignore  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
